--- a/SpaceXLaunches/View/Base.lproj/Main.storyboard
+++ b/SpaceXLaunches/View/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -49,20 +50,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g7Z-8K-MbQ">
-                                <rect key="frame" x="4" y="291" width="385" height="34.666666666666686"/>
+                                <rect key="frame" x="4" y="304" width="385" height="34.666666666666686"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="29"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TTL-Dl-LRJ">
-                                <rect key="frame" x="96.666666666666686" y="75" width="200" height="200"/>
+                                <rect key="frame" x="90" y="76.666666666666657" width="213" height="210"/>
+                                <color key="tintColor" systemColor="systemGray4Color"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="HbV-fP-CX6"/>
                                     <constraint firstAttribute="width" secondItem="TTL-Dl-LRJ" secondAttribute="height" multiplier="1:1" id="af2-OG-Ob1"/>
                                 </constraints>
+                                <imageReference key="image" image="photo" catalog="system" symbolScale="default"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kDA-AG-bYl">
-                                <rect key="frame" x="175.66666666666666" y="333.66666666666669" width="42" height="21"/>
+                                <rect key="frame" x="175.66666666666666" y="346.66666666666669" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -92,11 +94,8 @@
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K5Y-Hm-Tvf">
-                                <rect key="frame" x="4" y="358.66666666666669" width="385" height="200.00000000000006"/>
+                                <rect key="frame" x="4" y="371.66666666666674" width="385" height="366.33333333333326"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="0ly-It-iaC"/>
-                                </constraints>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -118,8 +117,10 @@
                         <viewLayoutGuide key="safeArea" id="aYO-6q-vWI"/>
                         <color key="backgroundColor" systemColor="systemGray6Color"/>
                         <constraints>
+                            <constraint firstItem="gdA-BZ-8rX" firstAttribute="top" secondItem="K5Y-Hm-Tvf" secondAttribute="bottom" constant="16" id="5hc-qe-32j"/>
                             <constraint firstItem="aYO-6q-vWI" firstAttribute="trailing" secondItem="K5Y-Hm-Tvf" secondAttribute="trailing" constant="4" id="7rb-FY-2et"/>
                             <constraint firstItem="aYO-6q-vWI" firstAttribute="bottom" secondItem="gdA-BZ-8rX" secondAttribute="bottom" constant="16" id="AII-33-RkS"/>
+                            <constraint firstItem="TTL-Dl-LRJ" firstAttribute="height" secondItem="uZB-H5-PKk" secondAttribute="height" multiplier="0.25" id="Auj-Qs-fXV"/>
                             <constraint firstItem="aYO-6q-vWI" firstAttribute="right" secondItem="g7Z-8K-MbQ" secondAttribute="right" constant="4" id="Eo8-Zr-JHr"/>
                             <constraint firstItem="gdA-BZ-8rX" firstAttribute="centerX" secondItem="uZB-H5-PKk" secondAttribute="centerX" id="ILz-FI-nmJ"/>
                             <constraint firstItem="aYO-6q-vWI" firstAttribute="bottom" secondItem="rwh-nG-wcz" secondAttribute="bottom" constant="16" id="Jl9-58-yXQ"/>
@@ -145,7 +146,6 @@
                         <outlet property="backgroundView" destination="uZB-H5-PKk" id="B32-Uc-rEe"/>
                         <outlet property="dateLabel" destination="kDA-AG-bYl" id="MM6-xl-KhX"/>
                         <outlet property="detailTextView" destination="K5Y-Hm-Tvf" id="50s-hm-xd8"/>
-                        <outlet property="detailTextViewHeightConstraint" destination="0ly-It-iaC" id="ltL-Uy-ayu"/>
                         <outlet property="imageView" destination="TTL-Dl-LRJ" id="O74-UA-4K3"/>
                         <outlet property="titleLabel" destination="g7Z-8K-MbQ" id="JXs-TT-dz6"/>
                         <outlet property="wikiButton" destination="8l8-R5-Hs5" id="lrO-aQ-5Kk"/>
@@ -177,8 +177,12 @@
         </scene>
     </scenes>
     <resources>
+        <image name="photo" catalog="system" width="128" height="93"/>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray4Color">
+            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
